syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

package xln.common.proto.command;

message RetryLog {

    string targetName = 1;
    google.protobuf.Any obj = 2;
    string jsonObj = 3;
}


message CacheTask {
    google.protobuf.StringValue cacheManagerName = 1;
    google.protobuf.StringValue cacheName = 2;
    google.protobuf.StringValue key = 3;


}